#1063 PMCT.Analytics av5.0.1.5
- Analytics SCT/Indicadores de proyectos: botón descuadrado

--- a/PMCTool.App/Views/ProjectIndicators/Index.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Index.cshtml
@@ -77,7 +77,7 @@
                             </div>
                             <div class="col-12 mt-1 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                 <div class="row">
-                                    <div class="col-md-6 text-left">
+                                    <div class="col-md-6 col-sm-6 col-6 text-left">
                                         <button id="btnReport" type="button" class="btn btn-default btn-default" style="background-color: #235B4E!important;">
                                             <span class="btn-label">
                                                 <i class="fa fa-file-alt"></i>
@@ -93,7 +93,7 @@
                                     </div>
                                     @if (ViewBag.participantUser.Type == 2)
                                     {
-                                         <div class="col-md-6 text-right">
+                                        <div class="col-md-6 col-sm-6 col-6 text-right">
                                             <button type="button" id="btnExcel" for="file" class="btn btn-wd btn-info btn-default">
                                                 <span class="btn-label">
                                                     <i class="fas fa-upload"></i>
