#1055 PMCT.Analytics av5.0.1.5
- SCT > INCIDENCIAS REPORTADAS > HOMOLOGAR VISTA

--- a/PMCTool.App/Views/ReportedIncidents/Index.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/Index.cshtml
@@ -90,9 +90,13 @@
                         </div>
                     </div>
                 </div>
-                <hr>
-                <hr>
-                <div id="divFichaTecnicaProyecto">
+                <div class="card data-tables">
+                    <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
+                        <div class="toolbar">
+                            <div id="divFichaTecnicaProyecto">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
