#1082 PMCT.Analytics av5.0.1.5
ANALYTICS > INDICADORES DE PROYECTO > DETALLE CORREGIR TABLA

--- a/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
@@ -125,9 +125,9 @@
                                                                     {
                                                                         <td class="text-center indicadores-danger"> @SPI </td>
                                                                     }
-                                                                    <td class="indicadores-danger">@BAC</td>
-                                                                    <td class="indicadores-danger">@EAC</td>
-                                                                    <td class="indicadores-warning">@VAC</td>
+                                                                    <td class="text-center">@BAC</td>
+                                                                    <td class="text-center">@EAC</td>
+                                                                    <td class="text-center">@VAC</td>
                                                                     <td>@EndDate</td>
                                                                     <td>@ProjectedDate</td>
                                                                 </tr>
