--- a/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
@@ -32,7 +32,7 @@
     const ProjectName = "@Name";
     @foreach (var d in Model.Chart)
         {
-            @:dataReport.push({"month":"@d.Month","anio":"@d.Anio","ac":"@d.AC","pc":"@d.ETC","av":"@d.AFRP","prc":"@d.AFRPMC","pv":"@d.PV"});
+            @:dataReport.push({"month":"@d.Month","anio":"@d.Anio","ac":"@d.AC","pc":"@d.ETC","av":"@d.AFRP","prc":"@d.AFRPMC","pv":"@d.PV","cp":"@d.CP","ap":"@d.AP"});
         } 
 
 </script>   
