--- a/PMCTool.App/Views/ProjectIndicators/Index.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Index.cshtml
@@ -42,8 +42,7 @@
                                     <option value="7">Por Definir</option>
                                 </select>
                             </div>
-
-                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="display:none">
                                 <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                     <option value="1">Potenciales</option>
                                     <option value="2">Preparación</option>
@@ -52,7 +51,7 @@
                                     <option value="5">Preparativos de ejecución</option>
                                     <option value="6">Ejecución</option>
                                 </select>
-                            </div>
+                            </div> 
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                 <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                     <option value="PEF">PEF</option>
