Nuevos requisirmientos sct

--- a/PMCTool.App/Views/AccumulatedInvestment/Index.cshtml
+++ b/PMCTool.App/Views/AccumulatedInvestment/Index.cshtml
@@ -24,44 +24,40 @@
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-live-search="true" data-actions-box="true">
-                                        <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
-                                        <option value="DGCF">Dirección General de Carreteras Federales (DGCF)</option>
-                                        <option value="DGCRyA">Dirección General de Caminos Rurales y Alimentadores (DGCRyA)</option>
-                                        <option value="DGCC">DG Conservación de Carreteras</option>
-                                        <option value="DGDC">DG Desarrollo carretero</option>
-                                        <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
-                                        <option value="Otros">Otros</option>
+                                          <option value="CF">Dirección de Carreteras Federales (CF)</option>
+                                        <option value="CRyA">Dirección de Caminos Rurales y Alimentadores (CRyA)</option>
+                                        <option value="DGCC">Dirección General de Conservación de Carreteras (DGCC)</option>
+                                        <option value="DGDC">Dirección General de Desarrollo Carretero (DGDC)</option> 
+                                        <option value="DGDFM">Dirección General de Desarrollo Ferroviario y Multimodal (DGDFM)</option> 
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">Infraestructura para el bienestar</option>
+                                        <option value="1">Plan Estratégico para el Bienestar</option>
                                         <option value="2">Reactivación Económica</option>
-                                        <option value="3">Accesorio</option>
-                                        <option value="4">Territorio Yaqui</option>
-                                        <option value="5">Compromisos de presiones sociales</option>
-                                        <option value="6">Obras de compromiso sectorial</option>
-                                        <option value="7">Por Definir</option>
+                                        <option value="3">Obra Social</option>
+                                        <option value="4">Programa Nacional de Infraestructura Ferroviaria</option>
+                                        <option value="6">Obras de Continuidad</option>
+                                        <option value="5">Por Definir</option>
                                     </select>
                                 </div>
 
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">Potenciales</option>
+                                         <option value="1">Biblioteca de proyectos</option>
                                         <option value="2">Preparación</option>
-                                        <option value="3">En proceso de análisis</option>
+                                        <option value="3">Análisis</option>
                                         <option value="4">Autorización</option>
-                                        <option value="5">Preparativos de ejecución</option>
-                                        <option value="6">Ejecución</option>
+                                        <option value="5">Ejecución</option> 
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Fuente de Financiamiento" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                         <option value="PEF">PEF</option>
-                                        <option value="FONADIN">FONADIN</option>
-                                        <option value="FONDEN">FONDEN</option>
+                                        <option value="FONADIN">FONADIN</option> 
                                         <option value="ESTATAL">ESTATAL</option>
                                         <option value="PRIVADA">PRIVADA</option>
+                                        <option value="Otro">Otro</option>
                                     </select>
                                 </div>
 
@@ -74,7 +70,7 @@
                                     </select>
                                 </div>
                                 <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <button type="button" id="btnSearch" class="btn btn-default btn-default" style="background-color: #235B4E!important;">
+                                    <button type="button" id="btnSearch" class="btn btn-default btn-default">
                                         <span class="btn-label"><i class="fa fa-file-alt"></i></span> Mostrar Reporte
                                     </button>
                                     <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1" style="">
