--- a/PMCTool.App/Views/AccumulatedInvestment/_PartialChart.cshtml
+++ b/PMCTool.App/Views/AccumulatedInvestment/_PartialChart.cshtml
@@ -1,10 +1,12 @@
 ﻿@model PMCTool.Models.Environment.AccumulatedInvestmentSummary;
-
+@{
+         var envName = Context.Request.Cookies["pmctool-name-env"]; 
+}
 <figure class="highcharts-figure">
     <div id="inversion"></div>
     <div class="col-12 center">
         <text class="font-weight-bold">
-            <span style="background-color: #235b4e; color: white">Inversión Acumulada Real =  @Model.TotalInvestmentReal.ToString("C2")  mdp</span>, <span style="background-color: #800000; color: white;">Inversión Acumulada Planeada =  @Model.TotalInvestmentPlanned.ToString("C2") mdp</span>,
+            <span style="background-color: #235B4E; color: white">Inversión Acumulada Real =  @Model.TotalInvestmentReal.ToString("C2")  mdp</span>, <span style="background-color: #800000; color: white;">Inversión Acumulada Planeada =  @Model.TotalInvestmentPlanned.ToString("C2") mdp</span>,
         </text>
         <text class="font-weight-bold">
             @Model.TotalProjects proyectos.
@@ -27,3 +29,11 @@
         </div>
     </div>
 </figure>
+    @if (envName == "Sct")
+    {
+        <div class="row pt-1">
+            <div class="col-md-12 text-right">
+                <img src="/images/ricardofm.png?v=1" style="max-height: 100px;">
+            </div>
+         </div>
+    } 
