--- a/PMCTool.App/Views/ActionsToMake/_ReportActiosToMake.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/_ReportActiosToMake.cshtml
@@ -11,7 +11,7 @@
                                         <thead>
                                                     <tr class="div-detail-head" style="font-size: 12px !important;
     font-weight: bold;
-    background-color: #235b4e;
+    background-color: #9F2241;
         color: #ffffff !important;">
                                                                         <th style="color: #ffffff !important;">Código</th>
                                                                         <th style="color: #ffffff !important;">Proyecto</th>
