--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -101,7 +101,7 @@
                                         <div class="col-md-12">
                                             <div class="row" style="padding-top:12px; height: 90px;">
                                                 <div class="col-md-8 text-left">
-                                                    <div style="font-size: 1.5em; color: #235B4E !important; padding-top: 22px; text-transform: uppercase;">
+                                                    <div style="font-size: 1.5em; color: #9F2241 !important; padding-top: 22px; text-transform: uppercase;">
                                                         <strong>Ubicación de sucursales</strong>
                                                     </div>
                                                 </div><div class="col-md-4 text-right">
