--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -50,7 +50,7 @@
                     <div class="col-md-12 pt-2">
                         <small class="font-weight-normal">Analytics</small>
                         <h4 class="Chapala align-items-center font-weight-bold  mb-0 mt-0">
-                           <span style="color: #235b4e !important;"> Ficha de proyecto crítico	</span>
+                           <span style="color: #9F2241 !important;"> Ficha de proyecto crítico	</span>
                         </h4>
                      </div>
                     <div class="col-md-12" id="divContainer" style="">
@@ -103,7 +103,7 @@
                                     {
                                         <table class="table table-hover table-striped tbimpact">
                                               <thead>
-                                                 <tr style="background-color: #235b4e;">
+                                                 <tr style="background-color: #9F2241;">
                                                     <th>Tipo</th>
                                                     <th>Evidencia</th>
                                                     <th>Estatus</th>
@@ -171,7 +171,7 @@
                                             {
                                               <table class="table table-hover table-striped">
                                                 <thead>
-                                                   <tr style="background-color: #235b4e;">
+                                                   <tr style="background-color: #9F2241;">
                                                       <th>Incidente</th>
                                                       <th>Elemento relacionado</th>
                                                       <th>Fecha de solución</th>
@@ -258,11 +258,11 @@
                                               {
                                                   <table class="table table-hover table-striped">
                                                       <thead>
-                                                          <tr style="background-color: #235b4e;">
+                                                          <tr style="background-color: #9F2241;">
                                                               <th rowspan="2" style="border: 1px solid !important;">Incidente</th>
                                                               <th colspan="3" style="border: 1px solid !important; text-align:center;display: table-cell;">Plan de acción</th>
                                                           </tr>
-                                                          <tr style="background-color: #235b4e;">
+                                                          <tr style="background-color: #9F2241;">
                                                               <th style="border: 1px solid !important;">Descripcion</th>
                                                               <th style="border: 1px solid !important;">Fecha de solución</th>
                                                               <th>Estatus</th>
