--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -59,7 +59,11 @@
                             <img src="/images/banbien.png" style="height: 400px;">
                     }else if (envName == "Sct")
                     {
-                      <img src="/images/Sct.png" style="height: 400px;">
+                            <div class="row pb-4 mb-4">
+                                <div class="col-md-12 pb-4 mb-4 text-center">
+                                    <img src="/images/ricardofm.png?v=1" style="max-height: 400px;">
+                                </div>
+                            </div>
 
 }
                     else
