--- a/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
@@ -44,7 +44,7 @@
                     <div class="col-md-10 pt-4">
                         <small class="font-weight-normal">Analytics</small>
                         <h4 class="Chapala align-items-center font-weight-bold  mb-0 mt-0">
-                            <span style="color: #235b4e !important;"> Detalle de indicadores de proyecto	</span>
+                            <span style="color: #9F2241 !important;"> Detalle de indicadores de proyecto	</span>
                         </h4>
                         <small class="font-weight-normal">Proyecto</small>
                         <h4 class="mt-1 font-weight-bold">
