--- a/PMCTool.App/Views/ReportedIncidents/_ParcialIncidentsByProject.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ParcialIncidentsByProject.cshtml
@@ -7,7 +7,7 @@
             @if (Model.Count > 0)
             {
 
-                <table class="table table-bordered tbcp" style="border-left: 4px solid #235b4e;">
+                <table class="table table-bordered tbcp" style="border-left: 4px solid #9F2241;">
                     <thead>
                         <tr style="background: #193e35;">
                             <th scope="col">Incidente</th>
