--- a/PMCTool.App/Views/ReportedIncidents/_ParcialTableIncidents.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ParcialTableIncidents.cshtml
@@ -14,7 +14,7 @@
                     <div class="col-md-12">
                         <table class="table table-hover table-striped tbincidents">
                             <thead>
-                                <tr style="background-color: #235b4e;">
+                                <tr style="background-color: #9F2241;">
                                     <th>Codigo</th>
                                     <th>Proyecto</th>
                                     <th>fase</th>
