--- a/PMCTool.App/Views/ReportedIncidents/_ReportIncidents.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ReportIncidents.cshtml
@@ -9,7 +9,7 @@
     <div class="fresh-datatables" style="margin-top:40px">
         <table id="tablebrachadvances" c class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
             <thead>
-                <tr class="div-detail-head" style="font-size: 12px !important;font-weight: bold;background-color: #235b4e;color: #ffffff !important;">
+                <tr class="div-detail-head" style="font-size: 12px !important;font-weight: bold;background-color: #9F2241;color: #ffffff !important;">
                     <th style="color: #ffffff !important;">Código</th>
                     <th style="color: #ffffff !important;">Proyecto</th>
                     <th style="color: #ffffff !important;">Fase</th>
@@ -62,9 +62,9 @@
                                         <img src="/images/arrowReport.png" style="width: 39px;">
                                     </td>
                                     <td colspan='6'>
-                                        <table class="table table-bordered tbcp" style="border-left: 4px solid #235b4e;">
+                                        <table class="table table-bordered tbcp" style="border-left: 4px solid #9F2241;">
                                             <thead>
-                                                <tr style="font-size: 12px !important;font-weight: bold;background-color: #235b4e;color: #ffffff !important;">
+                                                <tr style="font-size: 12px !important;font-weight: bold;background-color: #9F2241;color: #ffffff !important;">
                                                     <th style="color: #ffffff !important;" scope="col">Incidente</th>
                                                     <th style="color: #ffffff !important;" scope="col">Elemento relacionado</th>
                                                     <th style="color: #ffffff !important;" scope="col">Fecha de solución</th>
