--- a/PMCTool.App/Views/AccumulatedInvestment/_ReportAccumulatedInvestment.cshtml
+++ b/PMCTool.App/Views/AccumulatedInvestment/_ReportAccumulatedInvestment.cshtml
@@ -35,7 +35,7 @@
     </div>
     <div class="col-12 center">
         <text class="font-weight-bold">
-            <span style="background-color: #235b4e; color: white">Inversión Acumulada Real =  @Model.summary.TotalInvestmentReal.ToString("C2")  mdp</span>, <span style="background-color: #800000; color: white;">Inversión Acumulada Planeada =  @Model.summary.TotalInvestmentPlanned.ToString("C2") mdp</span>,
+            <span style="background-color: #235B4E; color: white">Inversión Acumulada Real =  @Model.summary.TotalInvestmentReal.ToString("C2")  mdp</span>, <span style="background-color: #800000; color: white;">Inversión Acumulada Planeada =  @Model.summary.TotalInvestmentPlanned.ToString("C2") mdp</span>,
         </text>
         <text class="font-weight-bold">
             @Model.summary.TotalProjects proyectos.
