--- a/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
@@ -77,7 +77,7 @@
                                     {
                                         <table class="table-striped" style="    width: 99%;">
                                               <thead>
-                                                 <tr style="background-color: #235b4e; color: white;">
+                                                 <tr style="background-color: #9F2241; color: white;">
                                                     <th style="padding: 5px;font-weight: normal !important;">Tipo</th>
                                                     <th style="padding: 5px;font-weight: normal !important;">Evidencia</th>
                                                     <th style="padding: 5px;font-weight: normal !important;">Estatus</th>
@@ -210,7 +210,7 @@
                                             {
                                               <table class="table table-hover table-striped">
                                                 <thead>
-                                                   <tr style="background-color: #235b4e;">
+                                                   <tr style="background-color: #9F2241;">
                                                       <th>Incidente</th>
                                                       <th>Elemento relacionado</th>
                                                       <th>Fecha de solución</th>
@@ -297,11 +297,11 @@
                                                 {
                                                     <table class="table table-hover table-striped">
                                                         <thead>
-                                                            <tr style="background-color: #235b4e;">
+                                                            <tr style="background-color: #9F2241;">
                                                                 <th rowspan="2" style="border: 1px solid !important;">Incidente</th>
                                                                 <th colspan="3" style="border: 1px solid !important; text-align:center;display: table-cell;">Plan de acción</th>
                                                             </tr>
-                                                            <tr style="background-color: #235b4e;">
+                                                            <tr style="background-color: #9F2241;">
                                                                 <th style="border: 1px solid !important;">Descripcion</th>
                                                                 <th style="border: 1px solid !important;">Fecha de solución</th>
                                                                 <th>Estatus</th>
