--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -215,30 +215,31 @@
                                             <td style="text-align:center"> @rowx.duration</td>
                                             <td style="text-align:center"> @rowx.start_date</td>
                                             @{
+                                                
+                                                int statustask = Convert.ToInt32(rowx.status);
                                                 var styleStatus = "";
-                                                @switch (@rowx.status)
+                                                string StatusIcon = "";
+                                                @switch (statustask)
                                                 {
-                                                    case 4:
-                                                        <td class="table-success">
-                                                            <i class="fas fa-check" style="color:white"></i>
-                                                        </td>
-                                                        break;
-                                                    case 2:
-                                                    case 3:
                                                     case 1:
-                                                        <td class="table-danger">
-                                                            <i class="fas fa-times" style="color:white"></i>
-                                                        </td>
+                                                        StatusIcon = "fas fa-circle ontime";
                                                         break;
-                                                    case 5:
-                                                        <td class="table-danger" style="background: #000000;">
-                                                            <i class="fas fa-ban" style="color:white"></i>
-                                                        </td>
+                                                    case 2:  
+                                                        StatusIcon = "fas fa-circle delayed";
+                                                        break;
+                                                    case 3: 
+                                                        StatusIcon = "fas fa-circle with-impact";
+                                                        break;
+                                                    case 4: 
+                                                        StatusIcon = "fas fa-circle closed";
+                                                        break;
+                                                    case 5: 
+                                                        StatusIcon = "fas fa-circle canceled";
                                                         break;
                                                 }
                                             }
-                                            <td class="table-success">
-                                                <i class="fas fa-check" style="color:white"></i>
+                                            <td >
+                                                <i class="@StatusIcon" style="font-size: 18px;"></i> 
                                             </td>
                                         </tr>
 
@@ -317,7 +318,7 @@
                                                           let  myChartx = new Chart(document.getElementById("doughnut-chart"), {
                                                               type: 'doughnut', 
                                                               data: {
-                                                                  labels: ["Privados", "Fonden", "Fonadin", "Estatal", "PEF"],
+                                                                  labels: ["Privados", "Otro", "Fonadin", "Estatal", "PEF"],
                                                                   datasets: [
                                                                       {
                                                                           backgroundColor: ["#330101", "#8B0000", "#D2B48C", "#FFE4C4"],
