--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
@@ -482,7 +482,7 @@
                                                           let  myChartx = new Chart(document.getElementById("doughnut-chart"), {
                                                               type: 'doughnut', 
                                                               data: {
-                                                                  labels: ["Privados", "Fonden", "Fonadin", "Estatal", "PEF"],
+                                                                  labels: ["Privados", "Otro", "Fonadin", "Estatal", "PEF"],
                                                                   datasets: [
                                                                       {
                                                                           backgroundColor: ["#330101", "#8B0000", "#D2B48C", "#FFE4C4"],
