--- a/PMCTool.App/Views/FactSheet/A/_PartialControlPoints.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_PartialControlPoints.cshtml
@@ -8,7 +8,7 @@
          @{
               @if(Model.controlPoints.Count > 0){
 
-                        <table class="table table-bordered tbcp" style="border-left: 4px solid #235b4e;">
+                        <table class="table table-bordered tbcp" style="border-left: 4px solid #9F2241;">
                             <thead>
                                 <tr style="background: #193e35;">
                                     <th scope="col">Punto de control</th>
