--- a/PMCTool.App/Views/Shared/_LayoutReport.cshtml
+++ b/PMCTool.App/Views/Shared/_LayoutReport.cshtml
@@ -61,7 +61,7 @@
             <nav class="navbar navbar-expand-lg " style="padding-bottom: 52px">
                 <div class="container-fluid" style="padding-bottom:40px">
                     <div class="row" style="padding-top:12px; height: 90px;"> 
-                        <div class="col-md-8 text-left"> <div style="font-size:1.5em; color: #235B4E !important;"><strong>@ViewBag.Title</strong></div> </div>
+                        <div class="col-md-8 text-left"> <div style="font-size:1.5em; color: #9F2241 !important;"><strong>@ViewBag.Title</strong></div> </div>
                         <div class="col-md-4 text-right"> <img src="/images/banbien.png" width="100px" style="    position: fixed;top: 0px;right: 36px;"> </div>
                         
                     </div> 
