--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-md-6">
                     <p class="title-section">
-                        <b>TDPA</b>
+                        <b>TDPA - Pasajeros</b>
                     </p>
                     <p>
                         @Tdpa
