--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexReport.cshtml
@@ -196,7 +196,7 @@
                     </td>
                     <td>
                         <p class="title-section">
-                            <b>TDPA</b>
+                            <b>TDPA - Pasajeros</b>
                         </p>
                         <p class="text-center info">
                             @Tdpa
